# scheduling-simulator

./: .gitignore  Cahier_de_recherche.org  Dockerfile  LICENSE  README.md  initialize.py  pyproject.toml  requirements.txt  setup_aws.sh  start_jupyter_container.sh  variance_inflation_factor.ipynb
.devcontainer/: Dockerfile  devcontainer.json
data/: downloadable_content.json  parameters.json
data/fitsim/: regression_report.json
examples/: regression_results.json
sched-container/: .devcontainer.json  Dockerfile  docker-compose.yml
schedsim/: run_sched_sim.py
schedsim/fitsim/: polynomials.py  regressor.py
src/: Makefile  benchmarks.py  deployment_cluster.xml  generate_simulation_data.py  parameters.txt  scheduling_simulator.py  simple_cluster.xml  simulator.py  swf_reader.py
src/jupyter/: atlas_analysis.ipynb  atlas_to_swf.py  mit_analysis.ipynb  parser_mit_dataset.py  workload_analysis.ipynb
src/regressor/: ctc-sp2-final-score.csv  dummy-score.csv  lublin-256-final-score.csv  regressor.py  sdsc-blue-final-score.csv
src/simulator/: current-simulation.csv  gather_data.py  simgrid.nix  simulator.py  simulator_trials.py  swf_reader.py  trials_simulator.c
src/simulator/states/: set-0.csv  set-1.csv  set-10.csv  set-11.csv  set-12.csv  (+27 more)
src/tester/: CTC-SP2_ACTUAL_22_12.csv  CTC-SP2_ESTIMATED_22_12.csv  Makefile  initial-simulation-submit.csv  parameters.c  parameters.h  polynomials.c  polynomials.h  sched-simulator-estimate-backfilling.c  sched-simulator-runtime.c  sched_experiments.py  tester.py
src/tools/: swf_reader.py
tests/: test_swf_reader.py
(+35 files in other folders)
